# Serverless-2049

./: .gitignore  README.md
nodejs/: README.md  package-lock.json  package.json  tsconfig.json
nodejs/src/: types.ts  unpack-function.ts
nodejs/src/util/: messaging.ts  storage.ts
scenarios/01/aws/: README.md
scenarios/01/aws/.results/: Java17ArmFunction.json  Java17Function.json  RustFunction.json  python3.9_arm_aws_results.json  python3.9_x86_aws_results.json
scenarios/01/aws/python_function/python_scenario_01/: function.py
scenarios/01/aws/python_function/tests/unit/: test_handler.py
scenarios/01/aws/rust-function/: Cargo.toml
scenarios/01/aws/rust-function/src/: main.rs
scenarios/02/: scenario-generic.yaml
scenarios/02/aws/: scenario-aws.yaml
scenarios/02/aws/java11-plain/source/monitoring/: Handler.java
scenarios/02/aws/java11-plain/source/monitoring/auth/: AWS4SignerBase.java  AWS4SignerForQueryParameterAuth.java  Credentials.java
scenarios/02/aws/java11-plain/source/monitoring/model/: Monitoring.java  RouterInfo.java
scenarios/02/aws/java11-plain/source/monitoring/service/: PresignedUrlSample.java  SecretService.java
scenarios/02/aws/java11-plain/source/monitoring/service/ping/: InetAddressPingProvider.java  PingProvider.java  (+3 more)
scenarios/02/aws/java11-plain/source/monitoring/utils/: BinaryUtils.java  HttpUtils.java
scenarios/02/azure/: scenario-azure.yaml
scenarios/03/: scenario.yaml
scenarios/03/aws/java-function/: pom.xml
scenarios/03/aws/python-function/: function.py
scenarios/03/aws/sqs-generator-function/: pom.xml
(+5 files in other folders)
