[package]
name = "lambda-function-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.1"
aws-sdk-dynamodb = "0.28.0"
aws-config = "0.55.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
